--- a/tables.html
+++ b/tables.html
@@ -33,8 +33,25 @@
             <button class="btn btn-danger btn-lg"><span class="fa fa-credit-card"></span> Make Reservations</button>
         </a>
         </div>
-  </div>   
-</div>
+        <br>
+      </div>   
+      <div class="cards">
+        <div class="reserveCard">
+          <h2>Current Reservations</h2>
+        </div>
+      </div>
+      <div class="reserveBody">
+        <ul id="currentList" class="list-group"></ul>
+      </div>
+      <br>
+      <div class="reserveCard">
+        <h2>Waiting List</h2>
+      </div>
+      <div class="reserveBody">
+        <ul id="currentList" class="list-group"></ul>
+      </div>
+    </div>
+    </div>
 
 </body>
 </html>
