fixed css problem

--- a/reservations.html
+++ b/reservations.html
@@ -24,10 +24,10 @@
     <h2 class="centeredText2">Skip the line and make your reservation now!</h2>
     <br>
     <div class="centeredButtons">
-        <a href="index.html">
+        <a href="/">
             <button class="btn btn-primary btn-lg"><span class="fa fas fa-home"></span> Home Page</button>
         </a>
-        <a href="tables.html">
+        <a href="/tables">
             <button class="btn btn-danger btn-lg"><span class="fa fa-list-alt"></span> View Tables</button>
         </a>
         </div>
@@ -64,6 +64,14 @@
       </div>
   </div>
 </div>
-
+<!-- <script type="text/javascript"> -->
+  // $(".btn-success").click(function(){
+    // return $.ajax({
+  //  url: "/api/notes",
+  //  data: note,
+  //  method: "POST"
+//  });
+  // })
+<!-- </script> -->
 </body>
 </html>
