--- a/tables.html
+++ b/tables.html
@@ -26,10 +26,10 @@
     </h2>
     <br>
     <div class="centeredButtons">
-        <a href="index.html">
+        <a href="/">
             <button class="btn btn-primary btn-lg"><span class="fa fas fa-home"></span>Home Page</button>
         </a>
-        <a href="reservations.html">
+        <a href="/reservations">
             <button class="btn btn-danger btn-lg"><span class="fa fa-credit-card"></span> Make Reservations</button>
         </a>
         </div>
