--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -29,10 +29,10 @@
     </h3>
     <br>
     <div class="centeredButtons">
-        <a href="tables.html">
+        <a href="/tables">
             <button class="btn btn-primary btn-lg"><span class="fa fa-list-alt"></span> View Tables</button>
         </a>
-        <a href="reservations.html">
+        <a href="/reservations">
             <button class="btn btn-danger btn-lg"><span class="fa fa-credit-card"></span> Make Reservations</button>
         </a>
         </div>
